new rest api endpoint to get pdu sessions
